--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,10 +13,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "emailjs": "^4.0.3",
     "express": "^4.21.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.12.0"
+    "mysql2": "^3.12.0",
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
