--- a/Frontend/netlify.toml
+++ b/Frontend/netlify.toml
@@ -1,3 +1,8 @@
+[build]
+  base = "frontend"
+  command = "npm run build"
+  publish = "frontend/build"
+  
 [[redirects]]
   from = "/*"
   to = "/index.html"
