--- a/Frontend/netlify.toml
+++ b/Frontend/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "frontend"
+  base = "Frontend"
   command = "npm run build"
-  publish = "frontend/build"
+  publish = "Frontend/build"
   
 [[redirects]]
   from = "/*"
