--- a/Frontend/netlify.toml
+++ b/Frontend/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "Frontend"
   command = "npm run build"
-  publish = "Frontend/build"
+  publish = "build"
   
 [[redirects]]
   from = "/*"
