--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "website",
   "version": "0.1.0",
-  "proxy": "http://localhost:5000",
+  "proxy": "https://ieee-backend-production.up.railway.app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
