--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,5 @@
-API_URL=ieee-backend-production.up.railway.app
+REACT_APP_API_URL=https://ieee-backend-production.up.railway.app
+REACT_APP_CLOUDINARY_CLOUD_NAME=dmibmwwsf
+REACT_APP_CLOUDINARY_API_KEY=564359542313955
+REACT_APP_CLOUDINARY_API_SECRET=RxYjq-HkgtfJvOLKT3eeNMVX1Lk
+REACT_APP_CLOUDINARY_UPLOAD_PRESET=ieee-images
