--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "emailjs": "^4.0.3",
